# swagger/swagger.json
@@ -72,40 +72,6 @@
                 }
             }
         },
-        "/home/": {
-            "get": {
-                "tags": [
-                    "home"
-                ],
-                "description": "Logs user into the system",
-                "operationId": "HomeController.Get",
-                "responses": {
-                    "200": {
-                        "description": "{string} login success"
-                    },
-                    "403": {
-                        "description": "user not exist"
-                    }
-                }
-            }
-        },
-        "/home/Get": {
-            "post": {
-                "tags": [
-                    "home"
-                ],
-                "description": "Logs user into the system",
-                "operationId": "HomeController.Get",
-                "responses": {
-                    "200": {
-                        "description": "{string} login success"
-                    },
-                    "403": {
-                        "description": "user not exist"
-                    }
-                }
-            }
-        },
         "/user/add": {
             "post": {
                 "tags": [
